# notgpt

./: README.md  captain-definition-client  captain-definition-server
notgpt-cli/: Dockerfile  Dockerfile.production  index.html  package-lock.json  package.json  vite.config.ts
notgpt-cli/src/: App.scss  App.tsx  index.css
notgpt-cli/src/atoms/: searchbar.ts
notgpt-cli/src/components/: Modal.tsx  SearchBar.tsx
notgpt-cli/src/types/: suggestions.ts
notgpt-cli/src/utils/: index.ts
notgpt-server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.production
notgpt-server/src/: handler.rs  main.rs  model.rs  queue.rs  response.rs  trie.rs
rustrie-cli/: package-lock.json  package.json
rustrie-cli/src/: App.scss  App.tsx  index.css
rustrie-cli/src/components/: Modal.tsx  SearchBar.tsx
rustrie-server/: .gitignore  Cargo.toml
rustrie-server/src/: handler.rs  main.rs  model.rs  queue.rs  response.rs  trie.rs
